[package]
name = "Study-Group-Organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2.1.0"}
#calamine = { version = "0.25.0"}
anyhow = { version = "1.0.44"}
office = { version = "0.8.1"}